Add parser using shunting-yard algorithm

--- a/src/zcalc/CMakeLists.txt
+++ b/src/zcalc/CMakeLists.txt
@@ -2,4 +2,4 @@ set(SOURCE_FILES
     main.cc)
 
 add_executable(zcalc ${SOURCE_FILES})
-target_link_libraries(zcalc LINK_PUBLIC tokenizer)
+target_link_libraries(zcalc LINK_PUBLIC parser tokenizer)
